--- a/bank-automat/mainwindow.ui
+++ b/bank-automat/mainwindow.ui
@@ -35,8 +35,8 @@
    <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>260</y>
+      <x>570</x>
+      <y>430</y>
       <width>591</width>
       <height>171</height>
      </rect>
@@ -53,6 +53,24 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="Credit">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>180</y>
+      <width>271</width>
+      <height>231</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+    border-image: url(:/credit);
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
