--- a/bank-automat/kirjaudusisaan.ui
+++ b/bank-automat/kirjaudusisaan.ui
@@ -424,18 +424,18 @@ color: rgb(255, 255, 255);</string>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>600</x>
+     <x>570</x>
      <y>150</y>
-     <width>381</width>
-     <height>311</height>
+     <width>411</width>
+     <height>331</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="1" column="2">
-     <widget class="QPushButton" name="numero6">
+     <widget class="QPushButton" name="N6">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -464,7 +464,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QPushButton" name="numero5">
+     <widget class="QPushButton" name="N5">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -493,7 +493,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="numero7">
+     <widget class="QPushButton" name="N7">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -522,7 +522,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="4" column="1">
-     <widget class="QPushButton" name="numero0">
+     <widget class="QPushButton" name="N0">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -552,7 +552,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="2" column="2">
-     <widget class="QPushButton" name="numero9">
+     <widget class="QPushButton" name="N9">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -581,7 +581,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QPushButton" name="numero4">
+     <widget class="QPushButton" name="N4">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -610,7 +610,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QPushButton" name="numero8">
+     <widget class="QPushButton" name="N8">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -639,7 +639,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="0" column="2">
-     <widget class="QPushButton" name="numero3">
+     <widget class="QPushButton" name="N3">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -668,7 +668,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QPushButton" name="numero2">
+     <widget class="QPushButton" name="N2">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -697,7 +697,7 @@ color: rgb(64, 88, 100);</string>
      </widget>
     </item>
     <item row="0" column="0">
-     <widget class="QPushButton" name="numero1">
+     <widget class="QPushButton" name="N1">
       <property name="minimumSize">
        <size>
         <width>100</width>
