--- a/bank-automat/kirjaudusisaan.ui
+++ b/bank-automat/kirjaudusisaan.ui
@@ -9,19 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1327</width>
-    <height>665</height>
+    <width>1583</width>
+    <height>820</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QDialog { 
-background-image: url(:/tausta28.png);
-background-repeat: no-repeat;
-background-position: center;
-alternate-background-color: rgb(227, 233, 229);};</string>
+   <string notr="true">background-image: url(:/tausta24.png);</string>
   </property>
   <widget class="QLabel" name="kirjauduTeksti">
    <property name="geometry">
@@ -48,8 +44,8 @@ alternate-background-color: rgb(227, 233, 229);};</string>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>480</y>
+     <x>470</x>
+     <y>540</y>
      <width>651</width>
      <height>111</height>
     </rect>
@@ -427,15 +423,15 @@ color: rgb(255, 255, 255);</string>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>150</y>
+     <x>590</x>
+     <y>190</y>
      <width>411</width>
      <height>331</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="1" column="2">
-     <widget class="QPushButton" name="N6">
+    <item row="3" column="1">
+     <widget class="QPushButton" name="N8">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -459,124 +455,7 @@ color: rgb(255, 255, 255);</string>
 color: rgb(64, 88, 100);</string>
       </property>
       <property name="text">
-       <string>6</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="N5">
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Ubuntu</family>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(227, 233, 229);
-color: rgb(64, 88, 100);</string>
-      </property>
-      <property name="text">
-       <string>5</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="N7">
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Ubuntu</family>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(227, 233, 229);
-color: rgb(64, 88, 100);</string>
-      </property>
-      <property name="text">
-       <string>7</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="N0">
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Ubuntu</family>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(227, 233, 229);
-selection-background-color: rgb(185, 255, 111);
-color: rgb(64, 88, 100);</string>
-      </property>
-      <property name="text">
-       <string>0</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="2">
-     <widget class="QPushButton" name="N9">
-      <property name="minimumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>100</width>
-        <height>50</height>
-       </size>
-      </property>
-      <property name="font">
-       <font>
-        <family>Ubuntu</family>
-        <pointsize>14</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(227, 233, 229);
-color: rgb(64, 88, 100);</string>
-      </property>
-      <property name="text">
-       <string>9</string>
+       <string>8</string>
       </property>
      </widget>
     </item>
@@ -609,8 +488,68 @@ color: rgb(64, 88, 100);</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QPushButton" name="N8">
+    <item row="5" column="1">
+     <widget class="QPushButton" name="N0">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(227, 233, 229);
+selection-background-color: rgb(185, 255, 111);
+color: rgb(64, 88, 100);</string>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QPushButton" name="N1">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(227, 233, 229);
+color: rgb(64, 88, 100);
+border-color: rgb(0, 0, 0);</string>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="N6">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -634,7 +573,7 @@ color: rgb(64, 88, 100);</string>
 color: rgb(64, 88, 100);</string>
       </property>
       <property name="text">
-       <string>8</string>
+       <string>6</string>
       </property>
      </widget>
     </item>
@@ -667,6 +606,64 @@ color: rgb(64, 88, 100);</string>
       </property>
      </widget>
     </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="N5">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(227, 233, 229);
+color: rgb(64, 88, 100);</string>
+      </property>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="N7">
+      <property name="minimumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu</family>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(227, 233, 229);
+color: rgb(64, 88, 100);</string>
+      </property>
+      <property name="text">
+       <string>7</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="1">
      <widget class="QPushButton" name="N2">
       <property name="minimumSize">
@@ -696,8 +693,8 @@ color: rgb(64, 88, 100);</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="N1">
+    <item row="3" column="2">
+     <widget class="QPushButton" name="N9">
       <property name="minimumSize">
        <size>
         <width>100</width>
@@ -718,11 +715,10 @@ color: rgb(64, 88, 100);</string>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(227, 233, 229);
-color: rgb(64, 88, 100);
-border-color: rgb(0, 0, 0);</string>
+color: rgb(64, 88, 100);</string>
       </property>
       <property name="text">
-       <string>1</string>
+       <string>9</string>
       </property>
      </widget>
     </item>
