--- a/bank-automat/paavalikko.ui
+++ b/bank-automat/paavalikko.ui
@@ -13,37 +13,50 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="ottoNappi">
+  <property name="styleSheet">
+   <string notr="true">background-image: url(:/tausta24.png);</string>
+  </property>
+  <widget class="QPushButton" name="nostoNappi">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>250</y>
+     <x>610</x>
+     <y>240</y>
      <width>161</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>Ubuntu</family>
+     <pointsize>22</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>Nosto</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="ottoLahjoitusNappi">
+  <widget class="QPushButton" name="lahjoitusNappi">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>320</y>
-     <width>181</width>
+     <x>510</x>
+     <y>330</y>
+     <width>261</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>Ubuntu</family>
+     <pointsize>22</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>Nosto + lahjoitus</string>
@@ -52,16 +65,21 @@
   <widget class="QPushButton" name="kirjauduUlosNappi">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>400</y>
-     <width>161</width>
+     <x>700</x>
+     <y>420</y>
+     <width>191</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>Ubuntu</family>
+     <pointsize>22</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>Kirjaudu ulos</string>
@@ -70,16 +88,21 @@
   <widget class="QPushButton" name="tapahtumatNappi">
    <property name="geometry">
     <rect>
-     <x>780</x>
-     <y>340</y>
-     <width>161</width>
+     <x>810</x>
+     <y>320</y>
+     <width>221</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>Ubuntu</family>
+     <pointsize>22</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>Tilitapahtumat</string>
@@ -88,16 +111,21 @@
   <widget class="QPushButton" name="saldoNappi">
    <property name="geometry">
     <rect>
-     <x>770</x>
-     <y>250</y>
+     <x>830</x>
+     <y>240</y>
      <width>161</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>Ubuntu</family>
+     <pointsize>22</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>Saldo</string>
@@ -114,8 +142,13 @@
    </property>
    <property name="font">
     <font>
+     <family>Ubuntu</family>
      <pointsize>26</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="plainText">
     <string>Päävalikko</string>
@@ -136,6 +169,10 @@
      <pointsize>18</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
+   </property>
    <property name="text">
     <string>Olet nyt kirjautuneena.....</string>
    </property>
@@ -148,6 +185,10 @@
      <width>141</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
    </property>
    <property name="text">
     <string>PushButton</string>
