--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -60,6 +60,12 @@
      <height>71</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>20</pointsize>
+    </font>
+   </property>
   </widget>
  </widget>
  <resources/>
