--- a/bank-automat/lahjoitus.ui
+++ b/bank-automat/lahjoitus.ui
@@ -93,6 +93,29 @@ background-color: rgb(255, 255, 255);</string>
     <string>Palaa takaisin</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>1180</x>
+     <y>20</y>
+     <width>281</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
+   </property>
+   <property name="text">
+    <string>Olet nyt kirjautuneena.....</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
