--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -54,8 +54,8 @@
   <widget class="QLineEdit" name="saldoKentta">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>220</y>
+     <x>700</x>
+     <y>230</y>
      <width>241</width>
      <height>71</height>
     </rect>
@@ -65,6 +65,29 @@
      <family>Ubuntu</family>
      <pointsize>20</pointsize>
     </font>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>1150</x>
+     <y>20</y>
+     <width>281</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(85, 170, 127);</string>
+   </property>
+   <property name="text">
+    <string>Olet nyt kirjautuneena.....</string>
    </property>
   </widget>
  </widget>
